// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillingCancel Button operator Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--outlined theme--light v-size--default" data-test="cancel-btn"><span class="v-btn__content">
          Cancel
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`BillingCancel Button owner Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" class="v-btn v-btn--outlined theme--light v-size--default red--text text--darken-1" data-test="cancel-btn"><span class="v-btn__content">
          Cancel
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`BillingCancel Dialog operator Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--outlined theme--light v-size--default" data-test="cancel-btn"><span class="v-btn__content">
          Cancel
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`BillingCancel Dialog owner Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" class="v-btn v-btn--outlined theme--light v-size--default red--text text--darken-1" data-test="cancel-btn"><span class="v-btn__content">
          Cancel
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div class="v-dialog__container"></div>
</fragment-stub>
`;
